--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8" />
 	<title>JavaScript Object Notation (JSON) | COMP1073 Client-Side JavaScript</title>
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+	<h1>JSON</h1>
 	<!-- STEP 1: Build out a HEADER and a SECTION element -->
 
 	<script>
