--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 <body>
 	<h1>JSON</h1>
 	<!-- STEP 1: Build out a HEADER and a SECTION element -->
+	<header>
 
+	</header>
+	<section>
+
+	</section>
 	<script>
 		/* STEP 2: Bind the HEADER and the SECTION elements above to variables */
-
+		let header = document.querySelector("header");
+		const section = document.querySelector("section");
 		/* STEP 3: Store the URL of a JSON file in a variable */
 
 		/* STEP 4: Create a new XHR object */
