--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 	</section>
 	<script>
 		/* STEP 2: Bind the HEADER and the SECTION elements above to variables */
-		let header = document.querySelector("header");
+		const header = document.querySelector("header");
 		const section = document.querySelector("section");
+
 		/* STEP 3: Store the URL of a JSON file in a variable */
 
 		/* STEP 4: Create a new XHR object */
