--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		request.responseType = "json";
 
 		/* STEP 7: Send the request with the send() method */
-		response.send();
+		request.send();
 
 		/* STEP 8: Add an event handler that listens for the onload event of the JSON file/object */
 		request.onload = function() {
