--- a/index.html
+++ b/index.html
@@ -42,8 +42,15 @@
 		request.onload = function() {
 			let iScreamInc = request.response;
 			console.log(iScreamInc);
+			populateHeader(iScreamInc);
 		}
+
 		/* STEP 9: Build out the populateHeader() function */
+		function populateHeader(jsonObj) {
+			let headerH1 = document.createElement("h1");
+			headerH1.textContent = jsonObj["companyName"];
+			header.appendChild(headerH1);
+		}
 
 		/* STEP 10a: Assemble the showTopFlavors() function */
 
