--- a/index.html
+++ b/index.html
@@ -28,39 +28,31 @@
 
 		/* STEP 4: Create a new XHR object */
 		let request = new XMLHttpRequest();
-
 		/* STEP 5: Open a new request using the request() method */
 		request.open("GET", requestURL);
-
 		/* STEP 6: Set JavaScript to accept JSON from the server */
 		request.responseType = "json";
-
 		/* STEP 7: Send the request with the send() method */
 		request.send();
-
 		/* STEP 8: Add an event handler that listens for the onload event of the JSON file/object */
 		request.onload = function() {
 			let iScreamInc = request.response;
 			console.log(iScreamInc);
 			populateHeader(iScreamInc);
+			showTopFlavors(iScreamInc);
 		}
-
 		/* STEP 9: Build out the populateHeader() function */
 		function populateHeader(jsonObj) {
 			let headerH1 = document.createElement("h1");
 			headerH1.textContent = jsonObj["companyName"];
 			header.appendChild(headerH1);
 		}
-
 		/* STEP 10a: Assemble the showTopFlavors() function */
 		function showTopFlavors(jsonObj) {
-
 			// STEP 10b: Bind the JSON topFlavors object to a var
-			let topFlavors = jsonObj["topFlavours"];
-
+			let topFlavors = jsonObj["topFlavors"];
 			// STEP 10c: Loop through the topFlavors object
-			for (let i = 0; i < topFlavors.length; i++) {
-
+			for (let i = 0; i < topFlavors.length; i ++) {
 				// STEP 10d: build HTML elements for the content
 				let article = document.createElement("article");
 				let h2 = document.createElement("h2");
@@ -68,30 +60,25 @@
 				let p1 = document.createElement("p");
 				let p2 = document.createElement("p");
 				let list = document.createElement("ul");
-
 				// STEP 10e: Set the textContent property for each of the above elements (except the UL), based on the JSON content
-				h2.textContent = topFlavors[1]["name"];
+				h2.textContent = topFlavors[i]["name"];
 				image.setAttribute("src", "images/" + topFlavors[i]["image"]);
 				p1.textContent = "dessert type: " + topFlavors[i]["type"];
 				p2.textContent = "calories: " + topFlavors[i]["calories"];
-
 				// STEP 10f: Build a loop for the ingredients array in the JSON
 				let ingredients = topFlavors[i]["ingredients"];
-				for (let j = 0; j < ingredients.length; j++) {
+				for (let j = 0; j < ingredients.length; j ++) {
 					let listItem = document.createElement("li");
 					listItem.textContent = ingredients[j];
-					
-					//add the ingredient to the UL 
+					// add the ingredient to the UL
 					list.appendChild(listItem);
 				}
-
 				// STEP 10g: Append each of the above HTML elements to the ARTICLE element
 				article.appendChild(h2);
 				article.appendChild(image);
 				article.appendChild(p1);
 				article.appendChild(p2);
 				article.appendChild(list);
-
 				// STEP 10h: Append each complete ARTICLE element to the SECTION element
 				section.appendChild(article);
 			}
