--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		const section = document.querySelector("section");
 
 		/* STEP 3: Store the URL of a JSON file in a variable */
-		let requestURL = "https://github.com/Branden-Yoshaev/Comp-1073-lesson-10/blob/master/js/i-scream.json";
+		//let requestURL = "https://github.com/Branden-Yoshaev/Comp-1073-lesson-10/blob/master/js/i-scream.json";
 		console.log(requestURL);
 
 		/* STEP 4: Create a new XHR object */
